--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ env:
 
   matrix:
   - LINT_CHECK="1"
-  - TESTS="1" ODOO_REPO="OCA/OCB"
-  - TESTS="1" ODOO_REPO="odoo/odoo" MAKEPOT="1"
+  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="account_invoice_shipping_expedition_nacex"
+  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="account_invoice_shipping_expedition_nacex" MAKEPOT="1"
 
 
 install:
