--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
-sudo: false
+sudo: true
 cache: pip
 
-python:
-  - "3.5"
+python: 3.5
+dist: xenial
 
 addons:
   postgresql: "9.6"
@@ -26,6 +26,7 @@ install:
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - pip install unidecode
+  - sudo apt-get install libgnutls28-dev
   - travis_install_nightly
 
 
